# diffusion-models

./: .gitignore  pyproject.toml
.claude/: CLAUDE.md
.kiro/specs/nd-shapes/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/samplers/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/score-unet/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/train-decoupling/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: documentation.md  experiment-matrix.md  numerics.md  product.md  roadmap.md  structure.md  tech.md  testing.md
diffusion-models/config/: cld_mixture.yaml  vp_mixture.yaml
diffusion-models/notebooks/: 01_data_and_forward.ipynb  02_train_and_sample.ipynb  03_image_data_source.ipynb  04_image_forward.ipynb  05_reconstruct_from_checkpoint.ipynb
diffusion-models/scripts/: data_generation.py  limpiar_imagenes.py  sample.py  train.py
diffusion-models/src/diffusion/: __init__.py
diffusion-models/src/diffusion/data_generation/: __init__.py  base.py  images.py  iterators.py  shapes.py
diffusion-models/src/diffusion/mlp/: __init__.py  score_mlp.py
diffusion-models/tests/: test_data_generation.py  test_image_data.py  test_models.py  test_resume.py  test_samplers.py  test_score_mlp.py  test_sde.py  test_training.py
docs/knowledge/: ddpm.md  score-based.md
docs/project/: cronica.md  data_generation.md  ejes.md  mlp.md  models.md  proyecto.md  referencias.md  samplers.md  sde.md  to-do.md  training.md
(+25 files in other folders)
